<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/approved_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approved_time_text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lon_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude_text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lat_text_view"
        app:layout_constraintTop_toBottomOf="@+id/approved_time" />


    <TextView
        android:id="@+id/lat_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/lon_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/approved_time" />

    <TextView
        android:id="@+id/loaded_data_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Loaded data"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lon_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toTopOf="@+id/download_button"
        app:layout_constraintTop_toBottomOf="@+id/loaded_data_view"
        tools:layout_editor_absoluteX="4dp" />


    <EditText
        android:id="@+id/lon_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/longitude_input_hint"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/download_button"
        app:layout_constraintStart_toEndOf="@+id/lat_input" />

    <EditText
        android:id="@+id/lat_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/latitude_input_hint"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lon_input"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="downloadWeather"
        android:text="@string/get_weather_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toEndOf="@+id/lat_input" />


</androidx.constraintlayout.widget.ConstraintLayout>