<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/date_and_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/approved_time_recycleView_text"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cloud_coverage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clouds_recycleView_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:id="@+id/temperature_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/temperature_recycleView_text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>